--- a/kubernetes-pod.yaml
+++ b/kubernetes-pod.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: dashboard-api
+  labels:
+    app: dashboard-api
 spec:
   containers:
   - name: dashboard-api
-    image: registry.gitlab.com/bikedashboard/dashboard-api:0.1
+    image: registry.gitlab.com/bikedashboard/dashboard-api:0.1.4
     env:
       - name: ip
         value: "10.133.75.95"
